--- a/apps/web/src/locales/es/translation.json
+++ b/apps/web/src/locales/es/translation.json
@@ -8,7 +8,7 @@
     "search": "Buscar",
     "loading": "Cargando...",
     "error": "Error",
-    "success": "Éxito",
+    "success": "Exito",
     "close": "Cerrar",
     "back": "Volver",
     "next": "Siguiente",
@@ -20,9 +20,10 @@
     "import": "Importar",
     "optional": "opcional",
     "submitting": "Enviando...",
-    "platformAdmin": "Admin de Plataforma - Selección de Inquilino Requerida",
-    "tenantSelectionRequired": "Como administrador de plataforma, debe seleccionar un inquilino específico para ver sus datos.",
-    "tenantSelectorComingSoon": "Selector de inquilino próximamente..."
+    "retry": "Reintentar",
+    "platformAdmin": "Admin de Plataforma - Seleccion de Inquilino Requerida",
+    "tenantSelectionRequired": "Como administrador de plataforma, debe seleccionar un inquilino especifico para ver sus datos.",
+    "tenantSelectorComingSoon": "Selector de inquilino proximamente..."
   },
   "auth": {
     "login": "Iniciar Sesión",
@@ -95,7 +96,142 @@
     "empty": {
       "title": "No hay empleados",
       "description": "Agrega tu primer empleado para comenzar."
-    }
+    },
+    "profile": {
+      "title": "Perfil del Empleado",
+      "tabs": {
+        "overview": "Resumen",
+        "timeEntries": "Fichajes",
+        "schedule": "Horario",
+        "compliance": "Cumplimiento",
+        "audit": "Auditoría"
+      },
+      "terminationDate": "Fecha de Baja",
+      "metadata": "Metadatos",
+      "createdAt": "Creado",
+      "updatedAt": "Última Actualización",
+      "noTimeEntries": "Sin fichajes",
+      "noTimeEntriesDesc": "Este empleado no tiene fichajes registrados.",
+      "tomorrow": "Mañana",
+      "upcomingShifts": "Próximos Turnos",
+      "noUpcomingShifts": "Sin turnos programados",
+      "noShiftsDesc": "Este empleado no tiene turnos programados.",
+      "listView": "Vista Lista",
+      "calendarView": "Vista Calendario",
+      "rdlCompliance": "Cumplimiento RDL 8/2019",
+      "rdlDescription": "Métricas de cumplimiento de la ley laboral española para este empleado.",
+      "weeklyHours": "Horas Semanales",
+      "maxWeeklyHours": "Máx 40h/semana",
+      "annualLeave": "Vacaciones Anuales",
+      "entitled": "Derecho",
+      "used": "Usadas",
+      "remaining": "Restantes",
+      "restPeriods": "Períodos de Descanso",
+      "minRestHours": "Mín 11h entre turnos",
+      "compliant": "Cumple",
+      "nonCompliant": "No Cumple",
+      "breakCompliance": "Cumplimiento de Descansos",
+      "required": "Requerido",
+      "actual": "Real",
+      "auditLog": "Registro de Auditoría",
+      "auditNotice": "Todos los cambios en este registro de empleado se guardan para cumplimiento.",
+      "noAuditEntries": "Sin entradas de auditoría",
+      "page": "Página",
+      "audit": {
+        "allActions": "Todas las Acciones",
+        "created": "Creado",
+        "updated": "Actualizado",
+        "statusChanged": "Estado Cambiado",
+        "roleChanged": "Rol Cambiado",
+        "deleted": "Eliminado",
+        "record": "registro"
+      }
+    },
+    "import": {
+      "title": "Importar Empleados",
+      "step1": "Subir CSV",
+      "step2": "Vista Previa y Validación",
+      "step3": "Resultados",
+      "dragDrop": "Arrastra y suelta tu archivo CSV aquí",
+      "orClickToSelect": "o haz clic para seleccionar un archivo",
+      "downloadTemplate": "Descargar Plantilla",
+      "csvFormat": "Formato CSV: nombre, apellidos, email, dni, seguridadSocial, telefono, puesto, tipoContrato, fechaAlta",
+      "selectFile": "Seleccionar Archivo",
+      "preview": "Vista Previa",
+      "validRows": "Filas Válidas",
+      "invalidRows": "Filas Inválidas",
+      "row": "Fila",
+      "errors": "Errores",
+      "importing": "Importando...",
+      "importComplete": "Importación Completa",
+      "imported": "Importados",
+      "failed": "Fallidos",
+      "skipped": "Omitidos",
+      "close": "Cerrar",
+      "startImport": "Iniciar Importación"
+    },
+    "export": {
+      "title": "Exportar Empleados",
+      "selectColumns": "Seleccionar Columnas",
+      "selectAll": "Seleccionar Todo",
+      "deselectAll": "Deseleccionar Todo",
+      "scope": "Ámbito de Exportación",
+      "allEmployees": "Todos los Empleados",
+      "selectedOnly": "Solo Seleccionados",
+      "selectedCount": "{{count}} empleados seleccionados",
+      "customFieldsNotice": "Los campos personalizados están disponibles con el módulo White Label.",
+      "includeCustomFields": "Incluir Campos Personalizados",
+      "exporting": "Exportando...",
+      "exportCSV": "Exportar CSV"
+    },
+    "customFields": {
+      "title": "Estudio de Campos Personalizados",
+      "description": "Crea campos personalizados para capturar información adicional de empleados específica de tu negocio.",
+      "addField": "Añadir Campo",
+      "fieldName": "Nombre del Campo",
+      "fieldType": "Tipo de Campo",
+      "required": "Obligatorio",
+      "options": "Opciones",
+      "optionsHelp": "Introduce las opciones separadas por comas",
+      "types": {
+        "text": "Texto",
+        "number": "Número",
+        "date": "Fecha",
+        "dropdown": "Desplegable"
+      },
+      "noFields": "Sin campos personalizados",
+      "noFieldsDesc": "Añade campos personalizados para capturar datos adicionales de empleados.",
+      "saving": "Guardando...",
+      "saveFields": "Guardar Campos",
+      "whiteLabelRequired": "El Estudio de Campos Personalizados requiere el módulo White Label.",
+      "learnMore": "Más Información"
+    },
+    "emailPreview": {
+      "title": "Vista Previa del Email de Bienvenida",
+      "description": "Vista previa del email de bienvenida que se enviará a los nuevos empleados.",
+      "language": "Idioma",
+      "spanish": "Español",
+      "english": "Inglés",
+      "subject": "Asunto",
+      "body": "Cuerpo del Email",
+      "variables": "Variables de Plantilla",
+      "variablesDesc": "Estos marcadores se reemplazarán con valores reales cuando se envíe el email."
+    },
+    "filter": {
+      "allStatus": "Todos los Estados",
+      "allContracts": "Todos los Contratos"
+    },
+    "selected": "{{count}} seleccionados",
+    "clearSelection": "Limpiar Selección",
+    "exportSelected": "Exportar Seleccionados",
+    "deleteSelected": "Eliminar Seleccionados",
+    "showing": "Mostrando {{count}} de {{total}} empleados",
+    "noResults": "Ningún empleado coincide con tus filtros",
+    "tryDifferentFilters": "Intenta ajustar tu búsqueda o filtros.",
+    "clearFilters": "Limpiar Filtros",
+    "viewProfile": "Ver Perfil",
+    "tools": "Herramientas",
+    "bulkActions": "Acciones Masivas"
   },
   "settings": {
     "settings": "Configuración",
@@ -353,19 +489,56 @@
       "learnMore": "Mas Informacion"
     }
   },
+  "advancedScheduling": {
+    "title": "Planificacion Avanzada",
+    "grid": {
+      "employee": "Empleado",
+      "dragShift": "Arrastra una plantilla para crear turno",
+      "dropHere": "Suelta el turno en la celda",
+      "noEmployees": "No se encontraron empleados"
+    },
+    "templates": {
+      "title": "Plantillas de Turno",
+      "morning": "Manana (9-17)",
+      "evening": "Tarde (17-1)",
+      "night": "Noche (1-9)",
+      "split": "Turno Partido",
+      "short": "Turno Corto"
+    },
+    "conflicts": {
+      "overlap": "Turnos superpuestos",
+      "restPeriod": "Periodo de descanso insuficiente (< 11h)",
+      "maxHours": "Supera 40 horas/semana"
+    },
+    "actions": {
+      "copyWeek": "Copiar Semana",
+      "clearWeek": "Limpiar Semana",
+      "autoFill": "Auto-Rellenar",
+      "export": "Exportar"
+    },
+    "scheduleCreated": "Horario creado exitosamente",
+    "shiftCreated": "Turno creado exitosamente",
+    "shiftMoved": "Turno movido exitosamente",
+    "shiftCreateError": "Error al crear turno",
+    "shiftMoveError": "Error al mover turno",
+    "weekCopied": "Semana copiada a la siguiente",
+    "weekCleared": "Semana limpiada exitosamente",
+    "clearError": "Error al limpiar semana",
+    "confirmClearWeek": "Estas seguro de que quieres eliminar todos los turnos de esta semana?"
+  },
   "timeTracking": {
     "clockIn": "Fichar Entrada",
     "clockOut": "Fichar Salida",
     "clockingIn": "Fichando entrada...",
     "clockingOut": "Fichando salida...",
-    "gettingLocation": "Obteniendo ubicación...",
+    "gettingLocation": "Obteniendo ubicacion...",
     "clockedIn": "Fichado",
     "clockedOut": "Salida Fichada",
     "clockedInSuccess": "Entrada fichada correctamente",
     "clockedOutSuccess": "Salida fichada correctamente",
     "startedAt": "Inicio a las",
     "hours": "horas",
-    "tapToClockIn": "Pulsa el botón para iniciar tu jornada",
+    "tapToClockIn": "Pulsa el boton para iniciar tu jornada",
     "todayStats": "Resumen de Hoy",
     "hoursWorked": "Horas Trabajadas",
     "breaks": "Descansos",
@@ -382,31 +555,73 @@
     "unscheduled": "No Programado",
     "scheduledShift": "Turno Programado",
     "unscheduledShift": "Turno No Programado",
-    "locationRecorded": "Ubicación registrada",
+    "locationRecorded": "Ubicacion registrada",
     "geoRecorded": "GPS registrado",
-    "locationEnabled": "Ubicación activada",
-    "locationBlocked": "Acceso a ubicación bloqueado",
-    "locationBlockedDesc": "Por favor, habilita el acceso a la ubicación en la configuración de tu navegador para un registro preciso.",
-    "locationPermissionDenied": "Permiso de ubicación denegado. Puedes fichar sin GPS.",
-    "geolocationRequired": "Tu empresa requiere la ubicación para el control horario.",
+    "locationEnabled": "Ubicacion activada",
+    "locationBlocked": "Acceso a ubicacion bloqueado",
+    "locationBlockedDesc": "Por favor, habilita el acceso a la ubicacion en la configuracion de tu navegador para un registro preciso.",
+    "locationPermissionDenied": "Permiso de ubicacion denegado. Puedes fichar sin GPS.",
+    "geolocationRequired": "Tu empresa requiere la ubicacion para el control horario.",
     "alreadyClockedIn": "Ya tienes una entrada fichada. Debes fichar salida primero.",
     "notClockedIn": "No tienes ninguna entrada fichada actualmente.",
-    "clockInError": "Error al fichar entrada. Por favor, inténtalo de nuevo.",
-    "clockOutError": "Error al fichar salida. Por favor, inténtalo de nuevo.",
+    "clockInError": "Error al fichar entrada. Por favor, intentalo de nuevo.",
+    "clockOutError": "Error al fichar salida. Por favor, intentalo de nuevo.",
     "loadError": "Error al cargar los datos de control horario.",
     "onBreak": "EN DESCANSO",
     "startBreak": "Iniciar Descanso",
     "endBreak": "Finalizar Descanso",
     "breakStarted": "Descanso iniciado",
     "breakEnded": "Descanso finalizado",
-    "startBreakError": "Error al iniciar descanso. Por favor, inténtalo de nuevo.",
-    "endBreakError": "Error al finalizar descanso. Por favor, inténtalo de nuevo.",
-    "yourLocation": "Estás en: {{address}}",
-    "earlyClockInTitle": "Estás fichando {{minutes}} minutos antes",
-    "earlyClockInMessage": "Tu turno comienza a las {{time}}. No deberías fichar antes de hora sin autorización.",
+    "startBreakError": "Error al iniciar descanso. Por favor, intentalo de nuevo.",
+    "endBreakError": "Error al finalizar descanso. Por favor, intentalo de nuevo.",
+    "yourLocation": "Estas en: {{address}}",
+    "earlyClockInTitle": "Estas fichando {{minutes}} minutos antes",
+    "earlyClockInMessage": "Tu turno comienza a las {{time}}. No deberias fichar antes de hora sin autorizacion.",
     "clockInAnyway": "Fichar de Todos Modos",
     "earlyClockInBlocked": "No puedes fichar tan pronto. Por favor, espera hasta que se acerque la hora de inicio de tu turno.",
-    "selectLocation": "Ubicación",
-    "chooseLocation": "Elige tu ubicación..."
+    "selectLocation": "Ubicacion",
+    "chooseLocation": "Elige tu ubicacion...",
+    "myTime": "Mi Tiempo",
+    "teamView": "Vista Equipo",
+    "manager": {
+      "title": "Quien Esta Trabajando",
+      "employee": "empleado",
+      "employees": "empleados",
+      "clockedIn": "Fichado",
+      "ago": "hace",
+      "noOneWorking": "Ningun empleado fichado actualmente",
+      "lastUpdated": "Actualizado:",
+      "live": "EN VIVO",
+      "loadError": "Error al cargar empleados activos"
+    },
+    "correction": {
+      "title": "Solicitar Correccion de Tiempo",
+      "description": "Envia una solicitud de correccion para aprobacion del manager",
+      "currentTimes": "Tiempos Actuales",
+      "correctedTimes": "Tiempos Corregidos",
+      "reason": "Motivo de la Correccion",
+      "reasonPlaceholder": "Por favor explica por que es necesaria esta correccion. Se especifico sobre lo que ocurrio (minimo 250 caracteres)...",
+      "submit": "Enviar Solicitud",
+      "submitError": "Error al enviar la solicitud. Por favor, intentalo de nuevo.",
+      "minChars": "{{count}} caracteres mas requeridos",
+      "characters": "caracteres",
+      "notice": "Tu solicitud de correccion sera enviada a tu manager para aprobacion. Seras notificado cuando sea revisada."
+    },
+    "geolocation": {
+      "title": "Datos de Ubicacion",
+      "clockInLocation": "Ubicacion de Entrada",
+      "clockOutLocation": "Ubicacion de Salida",
+      "address": "Direccion",
+      "addressUnavailable": "Direccion no disponible",
+      "coordinates": "Coordenadas",
+      "accuracy": "Precision",
+      "timestamp": "Fecha y Hora",
+      "auditTrail": "Registro de Auditoria",
+      "viewedBy": "Visto por",
+      "firstView": "Eres el primero en ver estos datos de ubicacion",
+      "gdprNotice": "La visualizacion de datos de ubicacion se registra para cumplimiento RGPD",
+      "openInMaps": "Abrir en Mapas",
+      "viewLocation": "Ver Ubicacion"
+    }
   }
 }
